Ast and parsing work

--- a/Lexer-cpp.vcxproj.filters
+++ b/Lexer-cpp.vcxproj.filters
@@ -44,5 +44,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include=".gitignore" />
+    <None Include=".editorconfig" />
   </ItemGroup>
 </Project>
