--- a/Lexer-cpp.vcxproj
+++ b/Lexer-cpp.vcxproj
@@ -157,6 +157,7 @@
     <Text Include="lang.txt" />
   </ItemGroup>
   <ItemGroup>
+    <None Include=".editorconfig" />
     <None Include=".gitignore" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
